--- a/src/styles.css
+++ b/src/styles.css
@@ -249,3 +249,25 @@ input[type="radio"]:checked + label::before {
   padding: 0.2rem;
   margin-right: 5px;
 }
+
+/* Table of Contents Styles */
+#toc ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#toc li {
+  margin-bottom: 0.5em;
+  padding-left: 1em;
+}
+
+#toc a {
+  font-weight: bold; 
+  font-size: 0.9em; 
+  text-decoration: none; 
+}
+
+#toc a:hover {
+  text-decoration: underline;
+}
