More font switcher integration. I'm liking this!

--- a/src/style.css
+++ b/src/style.css
@@ -33,3 +33,14 @@
     display: none;
   }
 }
+
+/* Example of adapting design to a font-switch */
+.homepage_card {
+  min-height: 275px;
+}
+
+[data-font="user"] {
+  .homepage_card {
+    min-height: 365px;
+  }
+}
