--- a/src/style.css
+++ b/src/style.css
@@ -53,7 +53,7 @@
 }
 
 .post-tag {
-  border: 1px solid var(--ifm-color-content-secondary);
+  border: 1px solid var(--ifm-color-gray-400);
   border-radius: 4px;
   color: var(--ifm-color-content);
   display: inline-block;
@@ -69,7 +69,7 @@
 
 [data-theme="dark"] {
   .post-tag:hover {
-    border: 1px solid var(--ifm-color-gray-700);
+    border: 1px solid skyblue;
     background-color: var(--ifm-color-info);
   }
 }
