--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,20 @@
 @import "_includes/css/opendyslexic.css";
 @import "_includes/css/forms.css";
 
+:root {
+  --pagefind-ui-scale: 1;
+  --pagefind-ui-primary: #034ad8;
+  --pagefind-ui-text: #393939;
+  --pagefind-ui-background: #ffffff;
+  --pagefind-ui-border: #eeeeee;
+  --pagefind-ui-tag: #eeeeee;
+  --pagefind-ui-border-width: 2px;
+  --pagefind-ui-border-radius: 8px;
+  --pagefind-ui-image-border-radius: 8px;
+  --pagefind-ui-image-box-ratio: 3 / 2;
+  --pagefind-ui-font: sans-serif;
+}
+
 /* Override for TOC list type */
 .table-of-contents,
 .table-of-contents ul {
@@ -112,4 +126,38 @@
 
 .footer__item {
   list-style-type: none;
+}
+
+/* Search Modal styles */
+.modal {
+  display: none; 
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  color: #333;
+}
+
+.modal-content {
+  background: #fff;
+  color: #333;
+  margin: 8% auto; 
+  padding: 20px;
+  border: 1px solid #888;
+  width: 65%; 
+  height: 70%;
+  position: relative;
+  overflow: auto;
+}
+
+.modal-top {
+  display: block;
+  text-align: right;
+  align-items: right;
+  font-weight: bold;
+  font-size: 12pt;
+  margin-bottom: 8px;
 }
