search modal: tweak close padding

--- a/src/style.css
+++ b/src/style.css
@@ -136,6 +136,7 @@
   font-weight: bold;
   font-size: 12pt;
   margin-bottom: 8px;
+  padding-right: 8px;
 }
 
 /* Hide various things on smaller screens */
