docs: make active link active

--- a/src/style.css
+++ b/src/style.css
@@ -149,6 +149,10 @@
   margin-left: -10px;
 }
 
+.menu__link--active {
+  padding-left: .75em;
+}
+
 /* Hide various things on smaller screens */
 @media (max-width: 976px) {
   /* Top nav logo */
