--- a/src/_components/feedback/style.css
+++ b/src/_components/feedback/style.css
@@ -37,6 +37,13 @@
   font-size: 10pt;
   font-weight: normal;
   margin-bottom: -1px;
+  margin-right: 10px;
+}
+
+[data-font="user"] {
+  #page-feedback .feedback__bumper p {
+    margin-right: 15px;
+  }
 }
 
 #page-feedback-form {
