--- a/src/style.css
+++ b/src/style.css
@@ -7,19 +7,6 @@
 @import "_includes/css/opendyslexic.css";
 @import "_includes/css/forms.css";
 
-:root {
-  --pagefind-ui-scale: 1;
-  --pagefind-ui-primary: #034ad8;
-  --pagefind-ui-text: #393939;
-  --pagefind-ui-background: #ffffff;
-  --pagefind-ui-border: #eeeeee;
-  --pagefind-ui-tag: #eeeeee;
-  --pagefind-ui-border-width: 2px;
-  --pagefind-ui-border-radius: 8px;
-  --pagefind-ui-image-border-radius: 8px;
-  --pagefind-ui-image-box-ratio: 3 / 2;
-  --pagefind-ui-font: sans-serif;
-}
 
 /* Override for TOC list type */
 .table-of-contents,
@@ -160,7 +147,17 @@
   padding-left: 0;
 }
 
-/* Hide various things on smaller screens */
+.tagWiki a {
+  color: navy;
+  text-decoration: underline;
+}
+
+.tagWiki a:hover {
+  text-decoration: none;
+  color: steelblue;
+}
+ 
+/* Consolidated media query */
 @media (max-width: 976px) {
   /* Top nav logo */
   #navbar-logo {
