comp.feedback: refine vote buttons. I think this is the final iteration for now.

--- a/src/_components/feedback/style.css
+++ b/src/_components/feedback/style.css
@@ -52,10 +52,14 @@
 }
 
 #page-feedback .pills__item--active {
-  background: skyblue;
+  background: lightblue;
   color: var(--ifm-pills-color-active);
 }
 
 #page-feedback .pills__item:not(.pills__item--active):hover {
-  background: skyblue;
+  background: lightblue;
+}
+
+#page-feedback .pills__item:not(.pills__item--active) {
+  background: #dbdbdb;
 }
