--- a/src/_components/feedback/style.css
+++ b/src/_components/feedback/style.css
@@ -1,5 +1,5 @@
 #page-feedback {
-  display: inline-block;
+  display: none;
   max-width: 550px;
   margin: 1.5em 0 1.5em;
 }
@@ -62,4 +62,8 @@
 
 #page-feedback .pills__item:not(.pills__item--active) {
   background: #dbdbdb;
+}
+
+#page-feedback-alert {
+  display: none;
 }
