--- a/src/_includes/css/opendyslexic.css
+++ b/src/_includes/css/opendyslexic.css
@@ -1,7 +1,8 @@
 @font-face {
   font-family: "opendyslexic";
-  src: url("/fonts/OpenDyslexic-Regular.woff2") format("woff2"),
-       url("/fonts/OpenDyslexic-Regular.otf") format("opentype");
+  src:
+    url("/fonts/OpenDyslexic-Regular.woff2") format("woff2"),
+    url("/fonts/OpenDyslexic-Regular.otf") format("opentype");
   font-style: normal;
   font-weight: normal;
   font-display: swap;
@@ -9,8 +10,9 @@
 
 @font-face {
   font-family: "opendyslexic";
-  src: url("/fonts/OpenDyslexic-Italic.woff2") format("woff2"),
-       url("/fonts/OpenDyslexic-Italic.otf") format("opentype");
+  src:
+    url("/fonts/OpenDyslexic-Italic.woff2") format("woff2"),
+    url("/fonts/OpenDyslexic-Italic.otf") format("opentype");
   font-style: italic;
   font-weight: normal;
   font-display: swap;
@@ -18,8 +20,9 @@
 
 @font-face {
   font-family: "opendyslexic";
-  src: url("/fonts/OpenDyslexic-Bold.woff2") format("woff2"),
-       url("/fonts/OpenDyslexic-Bold.otf") format("opentype");
+  src:
+    url("/fonts/OpenDyslexic-Bold.woff2") format("woff2"),
+    url("/fonts/OpenDyslexic-Bold.otf") format("opentype");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
