forgot to enable smooth scrolling

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,10 @@
 @import "_includes/css/opendyslexic.css";
 @import "_includes/css/forms.css";
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* Override for TOC list type */
 .table-of-contents,
 .table-of-contents ul {
