comp.feedback: we have a honeypot field

--- a/src/_components/feedback/style.css
+++ b/src/_components/feedback/style.css
@@ -60,6 +60,10 @@
   background: lightblue;
 }
 
+#page-feedback .verify {
+  display: none;
+}
+
 #page-feedback .pills__item:not(.pills__item--active) {
   background: #dbdbdb;
 }
