--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,9 @@ html {
   scroll-behavior: smooth;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  scroll-margin-top: 90px;
+}
 /* Override for TOC list type */
 .table-of-contents,
 .table-of-contents ul {
